# LT-s-vital

./: CMakeLists.txt  default.vitalskin
.github/workflows/: windows_build.yml
src/interface/editor_sections/: full_interface.cpp
src/synthesis/framework/: poly_values.h
